--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/a-reznikov/graphql-api#readme",
   "devDependencies": {
+    "axios": "^1.6.2",
     "graphql-yoga": "^5.0.2",
     "nodemon": "^3.0.2"
   },
